--- a/hambuger.css
+++ b/hambuger.css
@@ -730,3 +730,87 @@ table {
     display: block;
     z-index: 3;
 } */
+
+/*플랙스 박스영역*/
+@import url("https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400;500&display=swap");
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 0;
+  height: 8px;
+}
+
+/* body {
+  padding: 0;
+  margin: 0;
+  background-color: #17141d;
+  color: white;
+  font-family: "DM Mono", monospace;
+} */
+
+.container {
+    width: 1920px;
+    height: 100vh;
+}
+.container .gallery {
+    /* width: min(100% - 15px, 900px); */
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  /*   gap: 10px; */
+}
+.container .gallery .card {
+  position: relative;
+  height: 800px;
+  width: 100%;
+  flex: 1;
+  overflow: hidden;
+  /* border-radius: 15px; */
+  cursor: pointer;
+  filter: grayscale(80%);
+  transition: all 0.8s cubic-bezier(0.25, 0.4, 0.45, 1.4);
+}
+.container .gallery .card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.container .gallery .card .info {
+  width: 500px;
+  position: absolute;
+  z-index: 3;
+  padding: 15px;
+  bottom: 0;
+  opacity: 0;
+  transition: opacity 1.5s cubic-bezier(0.25, 0.4, 0.45, 1.4);
+  box-shadow: inset 0 -120px 120px -120px black, inset 0 -120px 120px -120px black;
+}
+.container .gallery .card:hover {
+  flex: 2;
+  filter: none;
+}
+.container .gallery .card:hover .info {
+  opacity: 1;
+}
+
+@media only screen and (max-width: 768px) {
+  .container .gallery {
+    wdith: 100%;
+    margin: 10px auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .container .gallery .card {
+    height: 200px;
+  }
+  .container .gallery .card .info {
+    width: 100%;
+    padding: 10px;
+  }
+  .container .gallery .card:nth-child(3n+3) {
+    grid-column: 1/3;
+  }
+}
