--- a/hambuger.css
+++ b/hambuger.css
@@ -8,7 +8,6 @@
 body{
     padding: 0;
     margin: 0;
-    /* height: 5000px; */
 }
 
 .buger-body{
@@ -266,7 +265,7 @@ height: 100vh;width: 100%; }
     width: 180px;
     height: 40px;
     margin-top: 20px;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     float: left;
     margin-left: 10px;
     transition: all 0.5s;
@@ -277,7 +276,7 @@ height: 100vh;width: 100%; }
 #menu2 .menu2-main>li{
     width: 150px;
     height: auto;
-    background-color: aqua;
+   /*  background-color: aqua; */
     margin-left: 130px;
     text-align: center;
 }
@@ -324,7 +323,6 @@ height: 100vh;width: 100%; }
     font-family: 'Playfair Display';
 }
 .welcom-box .welcom-horizon{
-    background-color: blueviolet;
     width: 800px;
     height: 2px;
     margin: auto;
@@ -738,18 +736,11 @@ table {
   width: 0;
   height: 8px;
 }
-
-/* body {
-  padding: 0;
-  margin: 0;
-  background-color: #17141d;
-  color: white;
-  font-family: "DM Mono", monospace;
-} */
-
 .container {
     width: 1920px;
     height: 100vh;
+    margin-top: 200px;
+    margin-bottom: 120px;
 }
 .container .gallery {
     /* width: min(100% - 15px, 900px); */
@@ -783,19 +774,57 @@ table {
   position: absolute;
   z-index: 3;
   padding: 15px;
-  bottom: 0;
-  opacity: 0;
+  bottom: 200px;
+  left: 650px;
+  /* opacity: 0; */
   transition: opacity 1.5s cubic-bezier(0.25, 0.4, 0.45, 1.4);
-  box-shadow: inset 0 -120px 120px -120px black, inset 0 -120px 120px -120px black;
+  text-align: center;
+}
+.container .gallery .card .info .title{
+    font-family: 'Playfair Display';
+    font-size: 25px;
+    color: #fff;
+    transition: all 0.8s;
+}
+.container .gallery .card .info .text{
+    font-family: 'Noto Sans KR';
+    color: #FFF;
+    font-size: 15px;
+}
+.container .gallery .card .info .btn{
+    width: 100px;
+    height: 40px;
+    border: 1px solid #fff;
+    position: absolute;
+    left: 200px;
+    bottom: -100px;
+    font-size: 13px;
+    line-height: 40px;
+    opacity: 0;
+    transition: all 0.8s;
+}
+.container .gallery .card .info .btn a{
+    width: 100px;
+    height: 40px;
+    display: block;
+    text-decoration: none;
+    color: #fff;
+    transition: all 0.8s;
 }
 .container .gallery .card:hover {
   flex: 2;
   filter: none;
 }
-.container .gallery .card:hover .info {
-  opacity: 1;
+.container .gallery .card:hover .info .title{
+    transform: scale(1.8);
 }
-
+.container .gallery .card:hover .btn{
+    opacity: 1;
+  }
+.container .gallery .card:hover .btn:hover a{
+    background-color: #fff;
+    color: #3e3e3e;
+}
 @media only screen and (max-width: 768px) {
   .container .gallery {
     wdith: 100%;
@@ -813,4 +842,177 @@ table {
   .container .gallery .card:nth-child(3n+3) {
     grid-column: 1/3;
   }
+}
+
+/*지도 영역*/
+.map-area{
+    width: 1200px;
+    height: 800px;
+    margin: auto;
+    position: relative;
+    /* background-color: blue; */
+}
+.map-area .horizon{
+    width: 800px;
+    height: 2px;
+    margin: auto;
+    border-radius: 10px;
+    background-color:  rgb(241, 227, 196);
+    margin-bottom: 50px;
+}
+.map-area .map-title{
+    font-family: 'Playfair Display';
+    font-size: 25px;
+    color: #3e3e3e;
+    margin-bottom: 80px;
+}
+.map-area .map{
+    width: 1200px;
+    height: 500px;
+    display: flex;
+    justify-content: space-between;
+}
+.map-area .map .gogleMap{
+    width:700px;
+    height: 500px;
+    filter: grayscale(1);
+}
+.map-area .text-box{
+    width: 500px;
+    height: 500px;
+    background-color: #f1e3c4;
+    position: absolute;
+    left: 650px;
+    top: 210px;
+}
+.map-area .text-box .text1{
+    margin-top: 100px;
+    margin-left: 210px;
+    color: #3e3e3e;
+    font-size: 20px;
+    font-family: 'Noto Sans KR';
+}
+.map-area .text-box .text2{
+    margin-top: 40px;
+    margin-left: 110px;
+    line-height: 50px;
+    color: #939393;
+    font-size: 15px;
+    font-family: 'Noto Sans KR';
+}
+
+/*푸터영역*/
+footer{
+    width: 1920px;
+    height: 500px;
+    background-color: #F1EBD6;
+}
+footer .footer-container{
+    width: 1200px;
+    height: 500px;
+    margin: auto;
+}
+footer .footer-container .company{
+    width: 1200px;
+    height: 50px;
+    /* background-color: #939393; */
+    padding-top: 50px;
+}
+
+footer .footer-container .footer-main{
+    display: flex;
+    margin-top: 80px;
+}
+footer .footer-container .footer-main .logo{
+    margin-right: 100px;
+}
+footer .footer-container .footer-main .text-area{
+    display: flex;
+    flex-direction: column;
+    color: #3e3e3e;
+    font-size: 15px;
+    font-family: 'Noto Sans KR';
+}
+footer .footer-container .footer-main .text-area .text-top{
+    display: flex;
+    margin-bottom: 30px;
+}
+footer .footer-container .footer-main .text-area .text-top a:hover{
+    color: #997321;
+    border-bottom: 1px solid #997321;
+}
+footer .footer-container .footer-main .text-area .text-top div{
+    margin-left: 30px;
+}
+footer .footer-container .footer-main .text-area .text-top div:nth-child(1){
+    margin-left: 0;
+}
+footer .footer-container .footer-main .text-area .text-top div a{
+    text-decoration: none;
+    color: #3e3e3e;
+}
+footer .more{
+    width: 300px;
+    height: 30px;
+    border-bottom: 1px solid #3e3e3e;
+    margin-left: 900px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+footer .more>a{
+    text-decoration: none;
+    color: #3e3e3e;
+    font-size: 15px;
+    transition: all 0.3s;
+}
+footer .more>a:hover{
+    color: #997321;
+}
+footer .more a{
+    display: block;
+}
+footer .more a .material-symbols-outlined:hover{
+color: #997321;
+}
+footer .more a .material-symbols-outlined{
+    transition: all 0.3s;
+}
+footer .horizon{
+    width: 100%;
+    height: 2px;
+    background-color: #3e3e3e;
+    margin-top: 20px;
+}
+footer .footer-sub{
+    margin-top: 50px;
+}
+div .footer-sub{
+    font-size: 15px;
+    font-family: 'Roboto';
+}
+div .footer-sub .sns{
+    width: 170px;
+    height: 35px;
+    display: flex;
+    margin-left: 1020px;
+}
+div .footer-sub .sns a{
+    display: block;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    color: #3e3e3e;
+    margin: 0 10px;
+}
+div .footer-sub .sns a span{
+    font-size: 28px;
+    transition: all 0.5s;
+}
+div .footer-sub .sns a span:hover{
+    color: #997321;
+}
+div .footer-sub .copy{
+    font-family:'Roboto';
+    font-size: 15px;
 }
